# g13-driver

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  config.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: catalog-index.yml  ci.yml  release.yml
catalog/: coding.toml  diablo-iii.toml  gaming.toml  index.json
ci/: check-version.sh
docs/: configuration.md  design-spec.md  implementation-plan.md  zadig-setup.md
milestones/: README.md
milestones/finished/: 01-mvp-console-driver.md  02-hardware-bringup.md  auto-repeat.md  auto-update.md  background-app.md  binding-labels.md  ci-releases.md  clock-center-mr-dryrun.md  configurable-lcd.md  gui-bindings-editor.md  gui-monitor.md  hold-means-hold-media-keys.md  icon-help-tab.md  joystick-labels-repeat.md  minor-improvements.md  monitor-joystick-ux.md  pre-release-polish.md  profile-catalog.md  profile-management.md  profile-provenance.md  public-release-readiness.md  thumb-buttons.md  unify-binding-rows.md  v0.4-lcd.md  v0.5-rgb.md
milestones/ongoing/: clock-center-mr-dryrun.md  configurable-lcd.md  icon-help-tab.md  joystick-labels-repeat.md  pre-release-polish.md  v0.4-lcd.md  v0.5-rgb.md
packaging/: README.txt
profiles/: basic.toml  default.toml  game.toml  media.toml
src/: autostart.rs  catalog.rs  config.rs  device_state.rs  dispatcher.rs  g13_glyphs.rs  icon.rs  joystick.rs  main.rs  profiles.rs  protocol.rs  runtime.rs  single_instance.rs  tray.rs  usb.rs
(+71 files in other folders)
