[package]
name = "g13-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
rusb    = "0.9"
serde   = { version = "1", features = ["derive"] }
toml    = "0.8"
anyhow  = "1"
log     = "0.4"
env_logger = "0.11"
notify  = "6"
eframe  = "0.31"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse"] }
