[package]
name = "g13-driver"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
rusb    = "0.9"
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
semver  = "1"
toml    = "0.8"
toml_edit = "0.22"
anyhow  = "1"
ureq    = "3"
log     = "0.4"
env_logger = "0.11"
notify  = "6"
eframe  = "0.31"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.56"
tray-icon = "0.24"
# Used only by the Windows-only update apply step (src/update/apply.rs).
sha2 = "0.11"
zip = { version = "8", default-features = false, features = ["deflate"] }
